--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ pip==21.0.1
 numpy==1.19.2
 matplotlib==3.4.1
 pandas==1.1.3
-python-dotenv==0.17.1
 streamlit==0.81.1
 plotly==4.14.3 
 scikit-learn==0.24.2
-tensorflow
+tensorflow-cpu==2.4.1
