--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,3 @@
 [theme]
-primaryColor="#181c1c"
-backgroundColor="#25221f"
-secondaryBackgroundColor="#bf4d0b"
-textColor="#f1f1f1"
+base="light"
+primaryColor="#f69a33"
